# nnUnet_deploy

./: .gitignore  LICENSE  README.md  keys.txt  labels.json  licence.txt  main.py  pyproject.toml  setup.py  test.ipynb  test.py
AutoOrgan/: preprocess.py  servicer.py  utils.py
nnUnet_deploy/: fixed.py  infer.py  munch.py  postprocess_gpu.py  preprocess.py  pth2onnx.py  servicer.py
